feat: use ConfiguredController