@@ -4,29 +4,35 @@ import static org.mockito.Mockito.any;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
+
+import io.javaoperatorsdk.operator.api.config.ControllerConfiguration;
+import java.time.LocalDateTime;
+import java.util.Arrays;
+
+import java.util.List;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
 import io.fabric8.kubernetes.api.model.KubernetesResourceList;
 import io.fabric8.kubernetes.client.Watcher;
 import io.fabric8.kubernetes.client.dsl.MixedOperation;
 import io.fabric8.kubernetes.client.dsl.Resource;
 import io.javaoperatorsdk.operator.TestUtils;
+import io.javaoperatorsdk.operator.api.config.ConfigurationService;
+import io.javaoperatorsdk.operator.processing.ConfiguredController;
 import io.javaoperatorsdk.operator.processing.event.EventHandler;
 import io.javaoperatorsdk.operator.sample.simple.TestCustomResource;
-import java.time.LocalDateTime;
-import java.util.Arrays;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
 
 class CustomResourceEventSourceTest {
 
   public static final String FINALIZER = "finalizer";
-  MixedOperation<TestCustomResource, KubernetesResourceList<TestCustomResource>, Resource<TestCustomResource>> client =
+  private static final MixedOperation<TestCustomResource, KubernetesResourceList<TestCustomResource>, Resource<TestCustomResource>> client =
       mock(MixedOperation.class);
   EventHandler eventHandler = mock(EventHandler.class);
 
   private CustomResourceEventSource<TestCustomResource> customResourceEventSource =
-      new CustomResourceEventSource<>(
-          client, null, true, FINALIZER, null, TestCustomResource.class);
+      new CustomResourceEventSource<>(new TestConfiguredController(true));
 
   @BeforeEach
   public void setup() {
@@ -36,7 +42,7 @@ class CustomResourceEventSourceTest {
   @Test
   public void skipsEventHandlingIfGenerationNotIncreased() {
     TestCustomResource customResource1 = TestUtils.testCustomResource();
-    customResource1.getMetadata().setFinalizers(Arrays.asList(FINALIZER));
+    customResource1.getMetadata().setFinalizers(List.of(FINALIZER));
 
     customResourceEventSource.eventReceived(Watcher.Action.MODIFIED, customResource1);
     verify(eventHandler, times(1)).handleEvent(any());
@@ -73,8 +79,7 @@ class CustomResourceEventSourceTest {
   @Test
   public void handlesAllEventIfNotGenerationAware() {
     customResourceEventSource =
-        new CustomResourceEventSource<>(
-            client, null, false, FINALIZER, null, TestCustomResource.class);
+        new CustomResourceEventSource<>(new TestConfiguredController(false));
     setup();
 
     TestCustomResource customResource1 = TestUtils.testCustomResource();
@@ -95,5 +100,42 @@ class CustomResourceEventSourceTest {
 
     customResourceEventSource.eventReceived(Watcher.Action.MODIFIED, customResource1);
     verify(eventHandler, times(2)).handleEvent(any());
+  }
+
+  private static class TestConfiguredController extends ConfiguredController<TestCustomResource> {
+
+    public TestConfiguredController(boolean generationAware) {
+      super(null, new TestConfiguration(generationAware), null);
+    }
+
+    @Override
+    public MixedOperation<TestCustomResource, KubernetesResourceList<TestCustomResource>, Resource<TestCustomResource>> getCRClient() {
+      return client;
+    }
+  }
+  private static class TestConfiguration implements
+      ControllerConfiguration<TestCustomResource> {
+
+    final ConfigurationService service = mock(ConfigurationService.class);
+    final boolean generationAware;
+    public TestConfiguration(boolean generationAware) {
+      when(service.getObjectMapper()).thenReturn(ConfigurationService.OBJECT_MAPPER);
+      this.generationAware = generationAware;
+    }
+
+    @Override
+    public String getAssociatedControllerClassName() {
+      return null;
+    }
+
+    @Override
+    public ConfigurationService getConfigurationService() {
+      return service;
+    }
+
+    @Override
+    public boolean isGenerationAware() {
+      return generationAware;
+    }
   }
 }
